# Omoikane

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
extensions/vscode/: .vscodeignore  package.json
extensions/vscode/src/: extension.ts
scripts/: publish.sh
src/omoikane/: __init__.py
src/omoikane/api/: app.py  routes.py  schemas.py
src/omoikane/cli/: main.py
src/omoikane/config/: settings.py
src/omoikane/db/: models.py
src/omoikane/ingestion/: github.py  notion.py  slack.py
src/omoikane/mcp/: server.py
src/omoikane/search/: engine.py
src/omoikane/web/: routes.py
src/omoikane/web/templates/: dashboard.html
tests/: conftest.py  test_api.py  test_schemas.py  test_search.py  test_web.py
