[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omoikane"
version = "0.1.0"
description = "AI Workspace Memory Layer — persistent memory for AI-assisted development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Yoi" }]
keywords = ["ai", "memory", "developer-tools", "context", "knowledge-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer[all]>=0.12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "alembic>=1.14.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.12.0",
]

[project.scripts]
omoikane = "omoikane.cli.main:app"

[project.urls]
Homepage = "https://github.com/yoi/omoikane"
Repository = "https://github.com/yoi/omoikane"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
